state the number of paths being viewed, fix binding event & display correct percentage on node hover

--- a/src/squid_api_pathanalysis_widget.hbs
+++ b/src/squid_api_pathanalysis_widget.hbs
@@ -18,10 +18,13 @@
         <div id="origin">
         </div>
       </div>
-      <div id="switcher" class="col-md-5">
+      <div class="col-md-5">
       </div>
       <div class="col-md-2">
       </div>
+    </div>
+    <div class="row stats">
+      <i class="fa fa-clock-o"></i> <span>Currently viewing top 5 paths</span>
     </div>
   </div>
 	<div class="pathanalysis_diagram">
@@ -29,6 +32,8 @@
 	</div>
   <div class="pathanalysis_columns">
     <div class="col-md-1 column-header">
+        <div class="col-md-6">
+        </div>
         <div class="col-md-6 percentage">
         Visit <br /> &nbsp;&nbsp;%
         </div>
