Design and compatibility updates

--- a/src/squid_api_pathanalysis_widget.hbs
+++ b/src/squid_api_pathanalysis_widget.hbs
@@ -38,7 +38,7 @@
         Visit <br /> &nbsp;&nbsp;%
         </div>
         <div class="col-md-6 steptime">
-        Average &nbsp;&nbsp;&nbsp;&nbsp;Path &nbsp;Steptime
+        &nbsp;&nbsp;&nbsp;&nbsp;Path &nbsp;&nbsp;&nbsp;&nbsp;Time &nbsp;Duration
         </div>
       </div>
   </div>
