Add OrderBy View & implement perceptive luminance to choose correct text colour

--- a/src/squid_api_pathanalysis_widget.hbs
+++ b/src/squid_api_pathanalysis_widget.hbs
@@ -14,17 +14,9 @@
 <div id="squid_api_pathanalysis_widget">
   <div class="pathanalysis_header">
     <div class="row">
-      <div class="col-md-2">
-        <div id="origin">
-        </div>
-      </div>
       <div class="col-md-5">
+        <div id="orderby" />
       </div>
-      <div class="col-md-2">
-      </div>
-    </div>
-    <div class="row stats">
-      <i class="fa fa-clock-o"></i> <span>Currently viewing top 5 paths</span>
     </div>
   </div>
 	<div class="pathanalysis_diagram">
