JSSDK-54 Add support for a number of steps selector view

--- a/src/squid_api_pathanalysis_widget.hbs
+++ b/src/squid_api_pathanalysis_widget.hbs
@@ -14,8 +14,11 @@
 <div id="squid_api_pathanalysis_widget">
   <div class="pathanalysis_header">
     <div class="row">
-      <div class="col-md-5">
+      <div class="col-md-2">
         <div id="orderby" />
+      </div>
+       <div class="col-md-2">
+        <div id="stepselector" />
       </div>
     </div>
   </div>
