JSSDK-93 Add time steps when hovering in popup

--- a/src/squid_api_pathanalysis_widget_tooltip.hbs
+++ b/src/squid_api_pathanalysis_widget_tooltip.hbs
@@ -16,5 +16,8 @@
   			<th class="clock"><i class="fa fa-clock-o"></i></th>
     		<th class="value">{{value}}</th>
   		</tr>
+      <tr>
+        <th class="step-number">step: <span style="font-size: 18px;">{{number}}</th>
+      </tr>
 	</table>
 </div>
